public/css/layout.css
body {
	min-height: 100%;
	font-family: sans-serif;
	font-size: 20px;
	line-height: 1.5;
	padding: 0;
	margin: 0;
	background-color: #f4f4f4;
}

/* Global */

.container {
	width: 80%;
	margin: auto;
	overflow: hidden;
}

.box {
	text-align: center;
}

/* I hate that this .button class isn't semantic.

TODO: Change styling of "Read More" buttons to
use an actual button tag instead of just <a>.*/

.button {
	display:inline-block;
	padding:0.35em 1.2em;
	border:0.1em solid #000000;
	margin:0 0.3em 0.3em 0;
	border-radius:0.12em;
	box-sizing: border-box;
	text-decoration:none;
	font-family:'Arial',sans-serif;
	font-weight:300;
	color:#000000;
	text-align:center;
	transition: all 0.15s;
	-webkit-box-shadow: 1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
 	-moz-box-shadow:    1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
    box-shadow:         1px 1px 1px 1px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
}

.button:hover {
	color:#FFFFFF;
	background-color:#000000;
}

@media all and (max-width:30em) {
.button {
 	display:block;
 	margin:0.4em auto;
 }
}

button {
    display: inline-block;
    border: none;
    padding: 0.5rem 1rem;
    margin: 0.5rem 0;
    text-decoration: none;
    background: #0069ed;
    color: #ffffff;
    font-family: sans-serif;
    font-size: 1rem;
    cursor: pointer;
    text-align: center;
    transition: background 150ms ease-in-out, 
                transform 150ms ease;
    -webkit-appearance: none;
    -moz-appearance: none;
}

button:hover,
button:focus {
    background: #0053ba;
}

button:focus {
    outline: 1px solid #fff;
    outline-offset: -4px;
}

button:active {
    transform: scale(0.99);
}

button a {
	text-decoration: none;
	color: #fff;
}


ul {
	margin: 0;
	padding: 0;
}

img {
	max-width: 500px;
	margin: 0 auto;
}

/* Header */

header {
	color: #fff;
	background-color: #000;
	min-height: 70px;
	/*border-bottom: 2px solid #000;*/
}

header a {
	color: #fff;
	text-decoration: none;
}

header a:hover {
	color: #fff;
	text-decoration: underline;
}

header li {
	float: left;
	display: inline;
	padding: 0 20px;
}

header #branding {
	float: left;
	margin: 0;
}

header #branding h1 {
	margin: 0;
}

header nav {
	float: right;
	margin-top: 20px;
}

header nav a {
	color: white;
	text-decoration: none;
	text-transform: lowercase;
}

header .current a {
	color: white;
	font-weight: bold;
	text-decoration: underline;
}

header a:hover {
	color: white;
}

/* Featured blog */

.featured-blog {
	background-color: #fff;
	margin: 20px auto;
	padding: 50px;
	width: 60%;
	border: 0.25px solid rgba(0, 230, 255, 0.49);
	border-radius: 0.12em;
	-webkit-box-shadow: 0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
	-moz-box-shadow:    0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Firefox 3.5 - 3.6 */
	box-shadow:         0.5px 0.5px 3px 0.5px rgba(122, 122, 122, 0.75);  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */

}

.featured-blog img {
	float: right;
	margin-left: 3em;
	/*text-align: center*/
}

.featured-blog p {
	color: #333333;
}

/* CTA */

#cta {
	text-align: center;
}

#cta button {
	font-size: 1.5rem;
}

/*Individual Blog Page*/

#blog button {
	float: left;
}

#blog form button {
	margin-left: 10px;
}

#blog img {
	margin: 2rem;
	float: right;
}

/* Footer */

footer {
	background-color: #828A95;
	min-height: 70px;
	color: white;
}

footer a {
	color: white;
	text-decoration: none;
}

footer a:hover {
	text-decoration: underline;
}

footer li {
	float: left;
	display: inline;
	padding: 0 20px;
}

footer nav {
	float: left;
	padding-top: 20px;
}

@media all and (max-width: 1350px){

	header #branding, 
	header nav, 
	header li,
	footer nav,
	footer li, 
	.featured-blog img {
		float: none;
		text-align: center;
		width: 100%;
		height: auto;
		margin-left: auto;
	}
}

@media all and (max-width: 484px){
	header nav, 
	header li,
	footer nav,
	footer li {
		display: block;
	}
}

